# openpilot-clip-discord

./: .gitmodules  Jenkinsfile  LICENSE  README.md  init.sh  live.sh  main.py  pyproject.toml  requirements.txt
openpilot-replay/: replay.py
openpilot-replay/clipper/: downloader.py  route_parser.py
